# pinora_cli

./: .gitignore  Cargo.toml  README.md  justfile
src/: commands.rs  file_json.rs  files.json  global_definition.rs  main.rs  module.rs  moduleDatabase.json  progress.rs  projectConfig.rs  projectConfigDatabase.rs  project_config.rs  project_config_database.rs  sharedTypes.rs  shared_types.rs  utility.rs
src/commands/: build.rs  create.rs
src/commands/root/: mod.rs
src/firmware/: firmware_definition.rs  firmware_store.rs  mod.rs
src/ui/: mod.rs  ui_definition.rs  ui_store.rs
