[package]
name = "Pinora"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
unique_id = "0.1.7"
reqwest = { version = "0.12", features = ["json"] }

tokio = { version = "1", features = ["full"] }
serialport = "4.9.0"

anyhow = "1"

[dependencies.uuid]
version = "1.23.2"
# Lets you generate random UUIDs
features = [
    "v4",
]
